syntax = "proto3";

option csharp_namespace = "Server";

package themesToPosts;

service ThemeToPostGrpc {
    rpc AssociateThemeToPost (AssociateThemeToPostRequest) returns (AssociateThemeToPostReply);

}

message ThemeToPost{
    string postName=1;
    string themeName=2;
}

message AssociateThemeToPostRequest {
    ThemeToPost Theme=1;
}


message AssociateThemeToPostReply {
    ThemeToPost Theme=1;
}
